# pos-backend

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  diff.patch  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  start.sh
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 928fcec64a08_initial_migration.py  cccf5f2a5fa1_adding_new_models.py
app/: main.py
app/db/: database.py
app/db/models/: menus.py  orders.py  restaurants.py  users.py
app/graphql/: schema.py
app/graphql/menu/: types.py
